# facts

./: README.md
.github/markdown_merger/: README.md  pyproject.toml  run.sh
.github/markdown_merger/src/markdown_merger/: __init__.py  markdown_merger.py
.github/workflows/: build-readme.yml
registered-members/: 0_template.md  2024-01.md  2024-02.md  README.md  majors-2024-01.csv  majors-2024-02.csv  roles-2024-01.csv  roles-2024-02.csv
