[project]
name = "markdown-merger"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jonghyeon Park", email = "belline0124@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
app = "markdown_merger:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_merger"]
